# ideagraph

./: .gitignore  .pre-commit-config.yaml  .prettierignore  .typos.toml  CITATION.cff  README.md  pyproject.toml  zensical.toml
.github/workflows/: publish.yml  publish_testpypi.yml  scheduled_release.yml
docs/: cli.md
docs/api/: core.md  extract.md  index.md  profiles.md  prov.md  reporting.md
packaging/claimkit-migration/: README.md  pyproject.toml
packaging/claimkit-migration/src/claimkit/: __init__.py
src/claimkit/: __init__.py  prov.py  reporting.py
src/claimkit/cli/: _options.py  add_activity.py  add_claim.py  add_evidence.py  digest.py  import_prov.py  init.py  main.py  mark.py  report.py  serve.py  validate.py
src/claimkit/core/: __init__.py  activity.py  claim.py  staleness.py  validation.py
src/claimkit/web/: __init__.py  app.py  document.py
src/ideagraph/: __init__.py  library.py  semantic.py
src/ideagraph/cli/: _profile.py  add_activity.py  add_claim.py  add_edge.py  add_evidence.py  add_node.py  add_relation.py  add_statement.py  add_xref.py  coverage.py  doctor.py  export.py  extract.py  find.py  import_prov.py  index.py  init.py  main.py  mark.py  promote.py  report.py  set_article.py  stale.py  validate.py
src/ideagraph/kg/: __init__.py  edge.py  extract.py  graph.py  node.py  persistence.py  profile.py  prov.py  reporting.py
src/ideagraph/kg/profiles/: __init__.py  article.py  project.py  project_ops.py  research.py  research_compat.py  research_diagnose.py  research_ops.py
src/ideagraph/server/api/: serializers.py  views.py
src/ideagraph/server/graphs/: __init__.py  admin.py  bridge.py  models.py  payload.py
src/ideagraph/server/graphs/management/commands/: export_graph.py  import_graph.py
src/ideagraph/server/graphs/migrations/: 0001_initial.py
src/ideagraph/server/web/: urls.py  views.py
src/ideagraph/server/web/static/web/css/: app.css
src/ideagraph/server/web/static/web/js/: graph.js
src/ideagraph/server/web/templates/web/: graph_detail.html  graphs_list.html
tests/: smoke_test.py  test_activity.py  test_api.py  test_claim.py  test_cli.py  test_cli_activity_fields.py  test_cli_add_activity.py  test_cli_add_evidence.py  test_cli_add_relation.py  test_cli_authoring.py  test_cli_build.py  test_cli_created_at.py  test_cli_digest.py  test_cli_doctor_profile.py  test_cli_export.py  test_cli_extract.py  test_cli_import.py  test_cli_index.py  test_cli_mark.py  test_cli_meta_json.py  test_cli_metadata.py  test_cli_phase_b.py  test_cli_promote.py  test_cli_shared_evidence.py  test_cli_stale.py  test_discourse.py  test_graphs_bridge.py  test_kg.py  test_kg_extract.py  test_kg_library.py  test_kg_persistence.py  test_kg_prov.py  test_kg_reporting.py  test_kg_research_ops.py  test_library.py  test_profiles_authoring.py  test_project_ops.py  test_prov_import.py  test_reporting.py  test_semantic.py  (+6 more)
