[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "ideagraph"
authors = [{ name = "Isaac C. F. Wong" }]
description = "An idea-graph engine: turn articles into a navigable graph of statements and their relationships"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = ["typer>=0.26.8"]

[project.optional-dependencies]
# `pip install ideagraph[web]` enables the Django web interface + REST API.
web = ["django>=5.2,<6.0", "djangorestframework>=3.15"]
# `pip install ideagraph[semantic]` enables `ideagraph find --semantic` (the
# default sentence-transformer embedder). Any custom embedder works without it.
semantic = ["sentence-transformers>=3.0"]

[dependency-groups]
dev = [
  "ruff>=0.15.22",
  "prek>=0.4.10",
  "pytest-github-actions-annotate-failures>=0.4.2",
  "pytest-cov>=7.1.0",
  "pytest-mock>=3.15.1",
  "pytest>=9.1.1",
  "pytest-django>=4.12.0",
  "django>=5.2.16,<6.0",
  "djangorestframework>=3.17.1",
]
docs = ["zensical>=0.0.51", "mkdocstrings-python>=2.0.5"]
build = ["hatch>=1.17.1"]
release = ["git-cliff>=2.13.1"]

[project.scripts]
ideagraph = "ideagraph.cli.main:app"

[project.urls]
Documentation = "https://isaac-cf-wong.github.io/ideagraph"
Source = "https://github.com/isaac-cf-wong/ideagraph"
Tracker = "https://github.com/isaac-cf-wong/ideagraph/issues"
Home = "https://github.com/isaac-cf-wong/ideagraph"
"Release Notes" = "https://github.com/isaac-cf-wong/ideagraph/releases"

[tool.dependency-support-policy]
# Rolling support floors (SPEC 0): runtime lower bounds are raised on a schedule
# by the support_floor_update.yml workflow, not by Renovate. See renovate.json.
policy = "spec0"
groups = ["project"]
lock = "minimal"
# For packages with ecosystem siblings released in lockstep, exclude them here
# and let Renovate keep them at latest, e.g.:
# exclude = ["my-sibling-package"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/ideagraph"]

[tool.coverage.run]
branch = true

[tool.coverage.report]
fail_under = 0

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov src --cov-append -m 'not integration' --cov-report=term-missing"
pythonpath = ["src"]
testpaths = "tests"
junit_family = "xunit2"
DJANGO_SETTINGS_MODULE = "ideagraph.server.settings"
markers = [
  "integration: marks as integration test",
  "notebooks: marks as notebook test",
  "gpu: marks as gpu test",
  "spark: marks tests which need Spark",
  "slow: marks tests as slow",
  "unit: fast offline tests",
]

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py, integration, spark, all

[testenv]
commands =
    pytest -m "not integration and not spark" {posargs}

[testenv:integration]
commands =
    pytest -m "integration" {posargs}

[testenv:spark]
extras = spark
setenv =
       PYSPARK_DRIVER_PYTHON = {envpython}
       PYSPARK_PYTHON = {envpython}
commands =
    pytest -m "spark" {posargs}

[testenv:all]
extras = all
setenv =
       PYSPARK_DRIVER_PYTHON = {envpython}
       PYSPARK_PYTHON = {envpython}
commands =
    pytest {posargs}
"""

[tool.ruff]
line-length = 120 # Matches Black's default
target-version = "py312" # Align with CI (3.12–3.14) and requires-python (>=3.12)
lint.extend-select = [
  "E",
  "F",
  "W",   # pycodestyle errors and warnings
  "I",   # isort rules
  "UP",  # pyupgrade rules
  "C90", # McCabe complexity
  "N",   # PEP8 naming
  "B",   # Bugbear (opinionated checks)
  "A",   # Flake8-builtins
  "C4",  # Flake8-comprehensions
  "PT",  # Flake8-pytest
  "RUF", # Ruff-specific rules
  "PL",  # Add pylint rules for fuller coverage
  "SIM", # Similarities
  "T10", # Debugger statements
  "DOC", # Docstring
  "D",   # Doc style
  "S",   # Security
]
lint.ignore = [
  "E501", # Line length (handled by formatter)
  "C901", # Disable overly strict complexity checks (optional, adjust as needed)
]
fix = true # Enable autofix
lint.unfixable = [] # List rules that should not be autofixed, if any

[tool.ruff.format]
quote-style = "double"       # Use double quotes for strings
indent-style = "space"       # Use spaces for indentation
docstring-code-format = true # Format code in docstrings

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Ignore specific rules in the tests directory
"tests/*" = ["S101", "ARG001", "PLC0415", "PLR2004", "S106", "S105"]
# S101: allow assert statements
# ARG001: allow unused function arguments (common in fixtures)
# PLC0415: allow import statements not at the top level
# PLR2004: allow magic values in the unit tests
# S106/S105: allow hardcoded test passwords/tokens in fixtures
"src/ideagraph/cli/*" = ["PLR0913"]
# PLR0913: Typer maps each CLI option to a function parameter, so command
# functions legitimately take more than five arguments.
"manage.py" = ["PLC0415"]
# PLC0415: Django's manage.py imports inside main() by design (import guard).
"src/ideagraph/server/settings.py" = ["S105"]
# S105: the development secret-key sentinel is compared, not a real secret.
"src/ideagraph/server/**/migrations/*" = ["D100", "D101", "D104", "RUF012"]
# Django-generated migrations: no module/class docstrings; Meta uses lists.
"src/ideagraph/server/**/models.py" = ["RUF012", "D106"]
# RUF012: Django Meta options are lists by convention (not ClassVar-annotated).
# D106: nested Meta / TextChoices classes are self-explanatory.
"src/ideagraph/server/api/*" = ["RUF012", "D106"]
# RUF012: DRF viewset/serializer class attributes are lists by convention.
# D106: serializer Meta classes are self-explanatory.
